<resources>
    <string name="app_name">ZHourSecurity</string>
    <string name="security">Security</string>
    <string name="guest">Guest</string>
    <string name="write_your_code">Write your code</string>
    <string name="check">Check</string>
    <string name="message">Guest of Mr. Chakravarthi, Plot no 620.</string>
    <string name="guest_check">Guest Check</string>
    <string name="scan_vehicle">Scan Vehicle</string>
    <string name="scan_text">Scan Text</string>
    <string name="rfid_scanner">RFID scanner </string>
    <string name="digits">0123456789</string>
</resources>
